# dio-bank

./: pyproject.toml
migrations/versions/: 7e89bb988d25_initial_migration.py  9334e056c186_add_password_field.py  984f7693fbfe_add_active_attr_in_user.py  d111e8edb320_initial_migration.py
src/: app.py
src/controllers/: auth.py  post.py  role.py  user.py
