[project]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "daniel-comp-dev",email = "daniel.dev.tec@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-migrate"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
