[project]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "daniel-comp-dev",email = "daniel.dev.tec@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate",
    "flask-jwt-extended (>=4.6)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
